--- a/public/app/modules/errors-service/directives/application-select/partials/template.html
+++ b/public/app/modules/errors-service/directives/application-select/partials/template.html
@@ -1,3 +1,3 @@
 <select class="select2" title=""
         ng-model="application"
-        ng-options="'%(name)s (AppID:%(applicationId)s#Code:%(code)s)'|fmt:option for option in applications"></select>
+        ng-options="'%(name)s - %(applicationId)s#%(code)s'|fmt:option for option in applications"></select>
