--- a/public/app/modules/errors-service/directives/application-table/partials/template.html
+++ b/public/app/modules/errors-service/directives/application-table/partials/template.html
@@ -6,11 +6,7 @@
     <md-button class="md-icon-button" style="margin-left: 0;" ng-click="filter.show = true" hide-sm>
         <i class="material-icons md-dark">filter_list</i>
     </md-button>
-    <md-checkbox aria-label="Auto-generated rows" ng-model="showEmpty" class="md-primary">
-        <md-tooltip>
-            Show auto-generated rows
-        </md-tooltip>
-    </md-checkbox>
+    <md-switch class="md-primary" md-no-ink aria-label="Show auto-generated rows" ng-model="showEmpty"></md-switch>
     <div flex hide-sm></div>
     <md-button class="md-icon-button" ng-click="addError($event)" hide-sm>
         <i class="material-icons md-dark">add</i>
@@ -29,7 +25,13 @@
 
 <md-data-table-toolbar class="alternate" ng-show="selected.length" layout-align="space-between">
     <div>არჩეულია {{selected.length}} {{selected.length > 1 ? 'ჩანაწერი' : 'ჩანაწერი'}}</div>
-    <md-button class="md-icon-button" ng-click="removeError($event)">
+    <div flex></div>
+    <!--
+    <md-button class="md-icon-button" style="margin-right: 0;" ng-click="editError($event)" ng-show="selected.length == 1">
+        <i class="material-icons md-dark">edit</i>
+    </md-button>
+    -->
+    <md-button class="md-icon-button" style="margin-left: 0;" ng-click="deleteError($event)">
         <i class="material-icons md-dark">delete</i>
     </md-button>
 </md-data-table-toolbar>
@@ -38,9 +40,9 @@
     <table md-data-table md-row-select="selected" md-progress="deferred">
         <thead>
         <tr>
-            <th name="Code" width="5%" numeric></th>
-            <th name="Keyword" width="25%"></th>
-            <th name="Message" width="70%"></th>
+            <th name="კოდი" width="5%" numeric></th>
+            <th name="საკვანძო სიტყვათა" width="25%"></th>
+            <th name="შეტყობინება" width="70%"></th>
         </tr>
         </thead>
         <tbody>
