--- a/public/app/modules/errors-service/views/partials/table-add-error-dialog.html
+++ b/public/app/modules/errors-service/views/partials/table-add-error-dialog.html
@@ -15,7 +15,7 @@
                 </md-input-container>
                 <md-input-container flex>
                     <label>საკვანძო სიტყვათა</label>
-                    <input name="keyword" ng-model="formData.keyword" required>
+                    <input name="keyword" ng-model="formData.keyword" ng-pattern="/^\w+$/" required>
                 </md-input-container>
             </div>
             <div layout="row" class="input-row">
